# finance

./: Cargo.toml
client_tui/: Cargo.toml
client_tui/src/: main.rs  views.rs
lib/: Cargo.toml
lib/src/: lib.rs
server/: Cargo.toml
server/migrations/2023-05-23-162405_start_table_layout/: down.sql  up.sql
server/src/: db.rs  engine.rs  main.rs  model.rs  schema.rs
server/src/db/: diesel_extension.rs
