[package]
name = "finance_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono =  {version = "0.4.24", features = ["default", "serde"]}
serde = {version="1.0.163", features=["derive"]}
tokio = {version="1.28.1", features=["full"]}
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
finance_lib = {path = "../lib"}
once_cell = "1.17.1"
axum-auth = "0.4.0"
diesel = {version = "2.0.4", features = ["mysql", "r2d2"]}
dotenvy = "0.15.7"
serde_json = "1.0.96"
